--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.8.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.12.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
