--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate --schema=./src/prisma/schema.prisma && prisma migrate --schema=./src/prisma/schema.prisma deploy && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate --schema=src/prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
